Skip to content

Assertion failed: p->pause_date != VLC_TS_INVALID

  1. Add a video to the playlist.
  2. In the Qt main window, press Space Bar twice (very quickly!) to start and immediately pause playback.
  3. Press Space Bar again to resume playback. This results in the following errors:
---------------------------
Microsoft Visual C++ Runtime Library
---------------------------
Assertion failed!

Program: ...wnload\vlc\vlc-2.1.0-git-20120311-0008\vlc.exe
File: ../../extras/package/win32/../../../src/.../output.c
Line: 431

Expression: p->pause_date != VLC_TS_INVALID
---------------------------
Microsoft Visual C++ Runtime Library
---------------------------
Assertion failed!

Program: ...wnload\vlc\vlc-2.1.0-git-20120311-0008\vlc.exe
File: ../../extras/package/win32/../../../src/.../output.c
Line: 426

Expression: p->pause_date == VLC_TS_INVALID

(The actual file name is probably src/audio_output/output.c.)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information